Prevent scrollbar overflow in footer disclosures

--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -349,7 +349,7 @@ noscript .localization-selector.link {
   color: #000000;
 }
 
-.localization-selector + .disclosure__list {
+.localization-selector + .disclosure__list-wrapper {
   margin-left: 1rem;
   opacity: 1;
   animation: animateLocalization var(--duration-default) ease;
